--- a/document.tex
+++ b/document.tex
@@ -43,6 +43,7 @@ parts]{classicthesis}
 \newcommand{\sssssssvar}{\textbf{SSSSSSS}}
 \newcommand{\kvar}{\textbf{K}}
 \newcommand{\ivar}{\textbf{I}}
+\newcommand{\approssima}{\approx_{b}}
 \renewcommand{\epsilon}{\varepsilon}
 \renewcommand{\theta}{\vartheta}
 \renewcommand{\rho}{\varrho}
