Tolta la seconda pagina e la lista tabelle

--- a/titlePage.tex
+++ b/titlePage.tex
@@ -36,15 +36,15 @@
 %--------------------------------------------------------------
 % back titlepage
 %--------------------------------------------------------------
-   \newpage
-	\thispagestyle{empty}
-	\hfill
-	\vfill
-	\noindent\myName: 
-	\textit{\myItalianTitle,} 
-	\myDegree, 
-	%\textcopyright\ 
-	\myTime
+%   \newpage
+%	\thispagestyle{empty}
+%	\hfill
+%	\vfill
+%	\noindent\myName: 
+%	\textit{\myItalianTitle,} 
+%	\myDegree, 
+%	%\textcopyright\ 
+%	\myTime
 %--------------------------------------------------------------
 % back titlepage end
 %--------------------------------------------------------------
