--- a/svolgimento.tex
+++ b/svolgimento.tex
@@ -492,7 +492,7 @@
 		\end{equation}
 		dalla caratterizzazione sappiamo che $\eqref{eq:uno} \Rightarrow \eqref{eq:due}$
 		
-		Dimostriamo adesso che questa implicazione vale per tutti e tre i nostri casi e quindi che sono simulazioni forti.
+		Dimostriamo adesso che questa implicazione vale per tutti e tre i nostri casi e quindi che \emph{Id}, $R\cup S$ e $RS$ sono simulazioni forti.
 		
 		\subsection{Caso Id}
 		
